--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,16 @@
             </div>
 
         </div>
+        <!--底部内容开始-->
+		<div class="footer">
+			<div class="copyright">
+				Copyright @ 2011-2017 www.codelieche.com all Rights Reserved
+				<br />
+				<a href="http://www.miibeian.gov.cn">粤ICP备xxxxxxxxx号</a>
 
+			</div>
+		</div>
+		<!--底部内容end-->
     {% endblock %}
 </body>
 <script type="text/javascript">
