--- a/apps/article/static/css/scss/article/_footer.scss
+++ b/apps/article/static/css/scss/article/_footer.scss
@@ -1,25 +1,28 @@
 @charset "UTF-8";
+/*
+  网站底部样式
+*/
 
 .footer {
-  margin-top:20px;
+  margin-top: 20px;
   text-align: center;
+
+  .copyright {
+    padding: 15px 0;
+    margin-top: 10px;
+    text-align: center;
+    line-height: 25px;
+    color: #999;
+    font-size: 13px;
+
+    a {
+      text-decoration: none;
+      color: #999;
+    }
+  }
+
 }
 
 footer {
   width: 100%;
-}
-
-.footer .footer_copyright {
-  //border-top: solid 1px #f8f8f8;
-  //background-color: #fff;
-  padding: 15px 0;
-  margin-top: 10px;
-  text-align: center;
-  line-height: 25px;
-  color: #999;
-  font-size: 13px;
-}
-.footer .footer_copyright a {
-  text-decoration: none;
-  color: #999;
 }
