User login View.

--- a/apps/article/static/css/login.scss
+++ b/apps/article/static/css/login.scss
@@ -12,8 +12,9 @@ body {
 }
 
 .login {
+  text-align: center;
   margin: 100px auto;
-  padding: 15px 10px;
+  padding: 0px;
   width: 300px;
   //height: 250px;
   background-color: #fff;
@@ -21,6 +22,21 @@ body {
   //margin-top: 50%;
   box-shadow: 0 1px 3px rgba(0,0,0,.3);
   border-radius: 5px;
+  .logo {
+    width: 100%;
+    //height: 120px;
+    background-color: #4A90E2;
+    text-align: center;
+    img {
+      width: 70%;
+      height: auto;
+      padding: 15px 0;
+    }
+  }
+  form {
+    padding: 15px 10px;
+    text-align: center;
+  }
   p {
     margin-bottom: 20px;
     label {
@@ -33,22 +49,51 @@ body {
     input {
       width: 160px;
       padding: 3px 5px;
+      line-height: 20px;
+      font-size: 14px;
     }
+    /* login错误info */
+
   }
+
+  .info {
+    width: 100%;
+    background-color: #f2dede;
+    color: #a94442;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
   .button {
     margin-top: 15px;
+    width: 100%;
     text-align: center;
     .btn {
-      width: 80px;
+      width: 90%;
       display: inline-block;
-      margin-right: 15px;
       font-size:16px;
       line-height: 25px;
       background-color: #fff;
       border:1px solid #dfdfdf;
       color: #555;
+      &:hover {
+        background-color: #F8F8F8;
+      }
+    }
+
+  }
+  /* 重置密码 */
+  .reset-pwd {
+    margin-top: 5px;
+    a {
+      font-size: 12px;
+      text-decoration: none;
+      color: #888;
+      &:hover {
+        color: #555;
+      }
     }
   }
-
-
 }
