1. static/img move to static/images; 2. add 403,404,500 page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                     <!--网站的logo-->
                     <div class="logo">
                         <a href="/" title="编程列车">
-                            <img src="{% static 'img/logo.svg' %}" >
+                            <img src="{% static 'images/logo.svg' %}" >
                         </a>
                         <a class="btn-nav" onclick="btnNavClick()">
                             <i class="icon-menu"></i>
