--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="login">
         <div class="logo">
-            <img src="{% static 'img/logo.svg' %}" alt="编程列车">
+            <img src="{% static 'images/logo.svg' %}" alt="编程列车">
         </div>
         {% if msg %}
             <div class="info">{{ msg }}</div>
