--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -16,13 +16,13 @@
                     <ul class="taglist">
                         {% for tag in post.tags.all %}
                             <li>
-                                 <a href="/tags/{{ tag.slug }}">{{ tag.name }}</a>
+                                 <a href="{% url 'article:tag_list' tag.slug %}">{{ tag.name }}</a>
                             </li>
                     {% endfor %}
                     </ul>
             {% endif %}
             {% if post.author == user %}
-                <span><a href="/article/{{ post.pk }}/editor">编辑</a></span>
+                <span><a href="{% url 'article:editor' post.pk %}">编辑</a></span>
             {% endif %}
         </div>
         <div class="article-content">
@@ -50,7 +50,7 @@
             <ul class="tags">
                 {% for tag in article_tags %}
                 <li>
-                    <a class="tag" href="/tags/{{ tag.slug }}">{{ tag.name }}</a>
+                    <a class="tag" href="{% url 'article:tag_list' tag.slug %}">{{ tag.name }}</a>
                 </li>
                 {% endfor %}
             </ul>
@@ -66,7 +66,7 @@
                 <ul class="article-list">
                     {% for post in similar_posts %}
                         <li>
-                            <a href="/article/{{ post.pk }}">{{ post.title }}</a>
+                            <a href="{% url 'article:detail' post.pk %}">{{ post.title }}</a>
                         </li>
                     {% endfor %}
                 </ul>
@@ -85,7 +85,7 @@
             <ul class="article-list">
                 {% for post in polular_posts %}
                 <li>
-                    <a href="/article/{{ post.pk }}">{{ post.title }}</a>
+                    <a href="{% url 'article:detail' post.pk %}">{{ post.title }}</a>
                 </li>
                 {% endfor %}
             </ul>
@@ -101,7 +101,7 @@
             <ul class="tags">
                 {% for tag in article_tags %}
                 <li>
-                    <a class="tag" href="/tags/{{ tag.slug }}">{{ tag.name }}</a>
+                    <a class="tag" href="{% url 'article:tag_list' tag.slug %}">{{ tag.name }}</a>
                 </li>
                 {% endfor %}
             </ul>
