--- a/apps/article/static/css/scss/article/_list-content.scss
+++ b/apps/article/static/css/scss/article/_list-content.scss
@@ -126,3 +126,45 @@
     }
   }
 }
+
+
+/* 列表 page 样式开始 */
+.content .page {
+  margin: 25px 0 auto;
+  overflow: hidden;
+  clear: both;
+  text-align: center;
+  padding-bottom: 20px;
+  a {
+    margin: 0 8px;
+    color: #4d555d;
+    border-radius: 16px;
+    padding: 0 4px;
+    min-width: 24px;
+    line-height: 32px;
+    font-size: 14px;
+    display: inline-block;
+    text-align: center;
+
+    -webkit-transition: border-color .2s;
+    -moz-transition: border-color .2s;
+    transition: border-color .2s;
+
+  }
+  .page-tag {
+    &:hover {
+      background: #d9dde1;
+      color: #4d555d;
+      text-decoration: none;
+    }
+    &.active {
+      background: #4d555d;
+      color: #fff;
+    }
+  }
+  .page-disabled {
+    height: 32px;
+    color: #c8cdd2;
+  }
+}
+/* 列表 page 样式end */
