--- a/templates/article/list_tag.html
+++ b/templates/article/list_tag.html
@@ -8,7 +8,7 @@
             <div class="item">
                 <div class="item-info">
                     <div>
-                        <a href="/article/{{ post.pk }}">
+                        <a href="{% url 'article:detail' post.pk  %}">
                             <h2 class="title">{{ post.title }}</h2>
                         </a>
                     </div>
