1. less 760px .articles .page-tag displan set to none; 2. article tag list use paginator; 3. bugfix article list page tag url.

--- a/apps/article/static/css/main.css
+++ b/apps/article/static/css/main.css
@@ -248,8 +248,10 @@ ul {
           display: block;
           width: 100%;
           box-sizing: border-box; }
-      .container .main .sidebar {
-        display: none; }
+        .container .main .content .articles .page-tag {
+          display: none; }
+    .container .sidebar {
+      display: none; }
 
   .footer {
     display: none; } }
