--- a/apps/article/static/css/scss/article/_main-content-sidebar.scss
+++ b/apps/article/static/css/scss/article/_main-content-sidebar.scss
@@ -48,12 +48,20 @@
           width: 100%;
           box-sizing: border-box;
         }
+        .articles {
+          .page-tag {
+            display: none;
+            //&.active{
+            //  display: inline-block;
+            //}
+          }
+        } // .articles
+        } // .content
       }
       .sidebar {
         display: none;
       }
     }
-  }
   //  底部样式不显示
   .footer {
     display: none;
