--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -21,7 +21,7 @@
                                 <ul class="taglist">
                                     {% for tag in post.tags.all %}
                                         <li>
-                                             <a href="/tags/{{ tag.slug }}">{{ tag.name }}</a>
+                                             <a href="{% url 'article:tag_list' tag.slug %}">{{ tag.name }}</a>
                                         </li>
                                 {% endfor %}
                                 </ul>
