--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -44,7 +44,7 @@
                                 selected="selected"
                              {% endif %}
                         >
-                            {{ category.title }}
+                            {{ category.name }}
                         </option>
                     {% endfor %}
                 </select>
