--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -17,7 +17,7 @@
                     </div>
 
                     <div class="meta">
-                        <span>发布于 {{ post.created }}</span>
+                        <span>发布于 {{ post.time_added }}</span>
                         {% if post.tags.count %}
                             <span style="margin-right:0px;">标签:</span>
                                 <ul class="taglist">
