调整文章创建/编辑/上传图片

--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -50,7 +50,7 @@
                 </select>
                 {% get_now as n %}
                 <label for="id_created">日期</label>
-                <input type="text" value="{{ n }}" name="created" id="id_created" />
+                <input type="text" value="{{ n }}" name="time_added" id="id_created" />
             </p>
             <p>
                 <input type="text" name="title" id="id_title" placeholder="标题字数10字以上" value="{{ post.title }}" >
