--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -15,7 +15,7 @@
 
 <div class="upload">
     <div class="content">
-        <form action="{% url 'article:upload' %}" method="post" enctype="multipart/form-data">
+        <form action="{% url 'pages:article:upload' %}" method="post" enctype="multipart/form-data">
             <p>
                 <label for="id_filename">上传图片:</label>
                 <input id="id_filename" name="filename" type="file" required="">
@@ -32,7 +32,7 @@
 
     <div class="content" style="">
         <div class="message fl"></div>
-        <form action="{% url 'article:create' %}" method="post" id="article">
+        <form action="{% url 'pages:article:create' %}" method="post" id="article">
             {% csrf_token %}
             <p>
                 <label for="id_category">文章分类: </label>
