--- a/templates/article/page.html
+++ b/templates/article/page.html
@@ -9,7 +9,7 @@
             <div class="item">
                 <div class="item-info">
                     <div>
-                        <a href="{% url 'article:detail' post.pk %}">
+                        <a href="{% url 'pages:article:detail' post.pk %}">
                             <h2 class="title">
                                 {% if post.deleted %}【删除】{% endif %}{% ifequal post.status 'draft' %}【草稿】{% endifequal %}{{ post.title }}
                             </h2>
@@ -23,7 +23,7 @@
                                 <ul class="taglist">
                                     {% for tag in post.tags.all %}
                                         <li>
-                                             <a href="{% url 'article:tag_list' tag.slug %}">{{ tag.name }}</a>
+                                             <a href="{% url 'pages:article:tag_list' tag.slug %}">{{ tag.name }}</a>
                                         </li>
                                 {% endfor %}
                                 </ul>
@@ -45,19 +45,19 @@
 
             {% for page in page_num_list %}
                 {% ifequal page posts.number %}
-                    <a class="page-tag active" href="{% url 'page' page %}">
+                    <a class="page-tag active" href="{% url 'pages:page' page %}">
                         {{ page }}
                     </a>
                 {% else %}
-                    <a class="page-tag" href="{% url 'page' page %}">
+                    <a class="page-tag" href="{% url 'pages:page' page %}">
                         {{ page }}
                     </a>
                 {% endifequal %}
             {% endfor %}
 
             {% if posts.has_next %}
-                    <a href="{% url 'page' posts.next_page_number %}" >下一页</a>
-                    <a href="{% url 'page' last_page %}" >尾页</a>
+                    <a href="{% url 'pages:page' posts.next_page_number %}" >下一页</a>
+                    <a href="{% url 'pages:page' last_page %}" >尾页</a>
             {% else %}
                  <a class="page-disabled">下一页</a>
                  <a class="page-disabled">尾页</a>
