--- a/templates/article/page.html
+++ b/templates/article/page.html
@@ -36,8 +36,8 @@
         <!--Page列表开始-->
         <div class="page">
             {% if posts.has_previous %}
-                <a href="{% url 'index' %}" >首页</a>
-                <a href="{% url 'page' posts.previous_page_number %}">上一页</a>
+                <a href="{% url 'pages:index' %}" >首页</a>
+                <a href="{% url 'pages:page' posts.previous_page_number %}">上一页</a>
             {% else %}
                  <a class="page-disabled">首页</a>
                  <a class="page-disabled">上一页</a>
