--- a/apps/question/front/src/style/less/question.less
+++ b/apps/question/front/src/style/less/question.less
@@ -5,14 +5,17 @@
     .header {
         padding: 10px 35px;
         color: #555;
+        h2 {
+            margin-bottom: 0;
+        }
     }
     .description {
         padding: 10px 20px;
         // padding-left: 20px;
         border-left: 4px solid #118060;
-        color: #444;
+        color: #555;
         margin-left: 35px;
-        background-color: #dfdfdf;
+        background-color: #e6e6e6;
     }
 
     .forms , .answers{
@@ -21,24 +24,37 @@
         margin: 10px auto;
         min-width: 650px;
         max-width: 950px;
+
+        .ant-radio-group.ant-radio-group-outline, .ant-checkbox-group{
+            // padding-left: 20px;
+            label {
+                margin-left: 8px;
+                display: block;
+            }
+        }
+
+        .ant-form-item-label {
+            margin-top: 10px;
+            font-weight: 500;
+            label::after{
+                // display: none;
+                content: "";
+            }
+        }
+
+        .ant-form-item-control-wrapper {
+            padding: 10px 15px;
+            border: 1px solid #f0f2f5;
+            border-top: 1px solid #d4d6d8;
+            box-shadow: 0 4px 18px -4px rgba(0, 0, 0, 0.1);
+            border-radius: 0 0 8px 8px;
+        }
+
+        .button {
+            margin-top: 15px;
+        }
     }
 }
-
-// .container {
-//     padding: 10px 20px;
-//     // 主内容标题
-//     .title {
-//       // border-bottom: 1px solid #DDD;
-//       margin-bottom: 10px;
-//       h4 {
-//         border-left: 2px solid #88b7e0;
-//         padding-left: 10px;
-//         margin-top: 8px;
-//         margin-bottom: 6px;
-//         color: #444;
-//       }
-//     }
-// }
 
 // 主体内容中的信息展示属性样式
 .container .info-property {
@@ -112,9 +128,15 @@
             background-color: #f9f9f9;
             padding: 5px 15px;
             margin-left: 5px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+            // border: 1px solid #ddd;
+            // border-radius: 5px;
             line-height: 35px;
+
+            border: 1px solid #f0f2f5;
+            border-top: 1px solid #d4d6d8;
+            box-shadow: 0 4px 18px -4px rgba(0, 0, 0, 0.1);
+            border-radius: 0 0 8px 0;
+            border-left: 4px solid #dfdfdf;
         }
     }
 }
