--- a/apps/question/front/src/style/main.less
+++ b/apps/question/front/src/style/main.less
@@ -8,5 +8,9 @@
     text-align: center;
 }
 
+// 引入基本样式
+@import "./less/base.less";
 // 引入问卷相关样式
 @import "./less/question.less";
+// 引入属性样式
+@import "./less/property.less";
